<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <!--用于定义底部栏的文字-->
    <string name="door">首页</string>
    <string name="chat">教育专区</string>
    <string name="learn">心理专区</string>
    <string name="mine">我的</string>
    <string name="school">家校通</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 用于定义岳麓沙龙列表项的字段-->
    <string name="title">第六届中国大学生设计大赛</string>
    <string name="chatTime">2016-10-31 下午4：00</string>
    <string name="chatArea">全国</string>
    <string name="source">文化部 中南大学</string>

    <string name="w1">时间：</string>
    <string name="w2">地点：</string>
    <string name="w3">主办方：</string>

    <!--用于定义家校互动模块的字段-->
    <string name="tvMessage">消息</string>
    <string name="tvLinkman">联系人</string>
    <string name="groupMsg">群发</string>
    <!--定义联系人列表字段-->
    <string name="linkman_name">俞志云</string>
    <string name="linkman_discrp">小小家长</string>

    <!--定义群发主界面的文字-->
    <string name="roles">请勾选群发对象</string>
    <string name="sure">确定</string>

    <!--用于定义在校学习模块的字段-->
    <string name="tvHistory">读文说史</string>
    <string name="tvEducation">教育智慧</string>
    <string name="contentTitle">阿凡提的智慧</string>
    <string name="contentTime">2016-12-18</string>
    <string name="contentAuthor">马小龙</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
