<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/content_item_img"
        android:paddingTop="2dp"
        android:paddingLeft="15dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerInside"
        android:src="@drawable/chat1"/>
    <TableLayout
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        >
        <TableRow >
            <TextView
                android:id="@+id/content_item_title"
                android:text="@string/contentTitle"
                android:textSize="18sp"
                android:layout_span="2"
                android:textColor="@color/black"/>
        </TableRow>
        <TableRow android:paddingTop="10dp">
            <TextView
                android:id="@+id/content_item_author"
                android:text="@string/contentAuthor"
                android:textSize="12sp"
                android:layout_span="1"
                android:textColor="@color/black"/>
            <TextView
                android:layout_gravity="center"
                android:textAlignment="center"
                android:id="@+id/content_item_time"
                android:text="@string/contentTime"
                android:textSize="12sp"
                android:layout_span="1"
                android:textColor="@color/black"/>
        </TableRow>
    </TableLayout>

</LinearLayout>