<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sunmeng.myapplication.fragment.schoolFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/school_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_massage"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/tvMessage"
            android:textSize="20dp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_linkman"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/tvLinkman"
            android:textSize="20dp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_groupMsg"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/groupMsg"
            android:textSize="20dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/cursor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/school_top"
        android:scaleType="matrix"
        android:src="@drawable/cursor"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_school"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_below="@id/cursor"
        android:background="@android:color/transparent"
        android:overScrollMode="never"
        />
</RelativeLayout>
