<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/test_item_img"
        android:paddingTop="5dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerInside"
        android:src="@drawable/chat1"/>
    <TableLayout
        android:paddingLeft="25dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        >
        <TableRow android:layout_marginBottom="15px">
            <TextView
                android:id="@+id/test_item_title"
                android:text="@string/title"
                android:textSize="20sp"
                android:layout_span="2"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow android:paddingTop="1dp">
            <TextView
                android:text="金额"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_span="1"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/test_item_money"
                android:text="@string/source"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_span="1"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow android:paddingTop="1dp"
            android:layout_marginTop="15px">
            <TextView
                android:text="已测试人数"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_span="1"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/test_item_person_num"
                android:text="@string/chatArea"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="1"
                android:textColor="@color/black"/>
        </TableRow>
    </TableLayout>
</LinearLayout>